name:          gl
version:       0.5
synopsis:      Complete OpenGL raw bindings
description:   Complete OpenGL raw bindings
license:       BSD3
license-file:  LICENSE
author:        Edward A. Kmett, Gabríel Arthúr Pétursson, Sven Panne
maintainer:    ekmett@gmail.com
copyright:     Copyright © 2014 Edward A. Kmett,
               Copyright © 2014 Gabríel Arthúr Pétursson,
               Copyright © 2013 Sven Panne
category:      Graphics
build-type:    Custom
cabal-version: >=1.18
extra-source-files:
  gl.xml man.txt extensions.txt
  CHANGELOG.markdown README.markdown TODO.markdown
  Generator.hs Module.hs Parser.hs Registry.hs Utils.hs

source-repository head
  type:     git
  location: https://github.com/ekmett/gl

flag UseNativeWindowsLibraries
   description:
      When compiling under Windows, use the native libraries instead of e.g. the
      ones coming with Cygwin.

flag UseGlXGetProcAddress
   description:
      Use glXGetProcAddress instead of dlsym on non-Windows/-Darwin platforms.

library
  hs-source-dirs: src
  c-sources: cbits/gl.c
  ghc-options: -Wall -O2

  build-depends:
      base == 4.*
    , containers == 0.5.*
    , fixed >= 0.2.1 && < 0.3
    , half >= 0.2 && < 0.3
    , transformers >= 0.2 && < 0.5

  -- for Setup.hs
  build-depends:
      directory == 1.2.*
    , filepath == 1.3.*
    , hxt == 9.3.*
    , split == 0.2.*

  default-language: Haskell2010

  if os(windows) && flag(UseNativeWindowsLibraries)
    if arch(i386)
      cpp-options: "-DCALLCONV=stdcall"
    else
      cpp-options: "-DCALLCONV=ccall"
    cc-options: "-DUSE_WGLGETPROCADDRESS"
    extra-libraries: opengl32
  else
    cpp-options: "-DCALLCONV=ccall"
    if !os(darwin) && !os(ios) && flag(UseGlXGetProcAddress)
      cc-options: "-DUSE_GLXGETPROCADDRESS"
    else
      cc-options: "-DUSE_DLSYM"
    if os(darwin)
      frameworks: OpenGL
    else
      if os(ios)
        frameworks: OpenGLES
      else
        extra-libraries: GL

  exposed-modules:
    Graphics.GL
    Graphics.GL.Compatibility32
    Graphics.GL.Compatibility33
    Graphics.GL.Compatibility40
    Graphics.GL.Compatibility41
    Graphics.GL.Compatibility42
    Graphics.GL.Compatibility43
    Graphics.GL.Compatibility44
    Graphics.GL.Compatibility45
    Graphics.GL.Core32
    Graphics.GL.Core33
    Graphics.GL.Core40
    Graphics.GL.Core41
    Graphics.GL.Core42
    Graphics.GL.Core43
    Graphics.GL.Core44
    Graphics.GL.Core45
    Graphics.GL.Embedded20
    Graphics.GL.Embedded30
    Graphics.GL.Embedded31
    Graphics.GL.EmbeddedCommon11
    Graphics.GL.EmbeddedLite11
    Graphics.GL.Extension
    Graphics.GL.Extension.AMD
    Graphics.GL.Extension.AMD.BlendMinmaxFactor
    Graphics.GL.Extension.AMD.Compressed3DCTexture
    Graphics.GL.Extension.AMD.CompressedATCTexture
    Graphics.GL.Extension.AMD.ConservativeDepth
    Graphics.GL.Extension.AMD.DebugOutput
    Graphics.GL.Extension.AMD.DepthClampSeparate
    Graphics.GL.Extension.AMD.DrawBuffersBlend
    Graphics.GL.Extension.AMD.GcnShader
    Graphics.GL.Extension.AMD.GpuShaderInt64
    Graphics.GL.Extension.AMD.InterleavedElements
    Graphics.GL.Extension.AMD.MultiDrawIndirect
    Graphics.GL.Extension.AMD.NameGenDelete
    Graphics.GL.Extension.AMD.OcclusionQueryEvent
    Graphics.GL.Extension.AMD.PerformanceMonitor
    Graphics.GL.Extension.AMD.PinnedMemory
    Graphics.GL.Extension.AMD.ProgramBinaryZ400
    Graphics.GL.Extension.AMD.QueryBufferObject
    Graphics.GL.Extension.AMD.SamplePositions
    Graphics.GL.Extension.AMD.SeamlessCubemapPerTexture
    Graphics.GL.Extension.AMD.ShaderAtomicCounterOps
    Graphics.GL.Extension.AMD.ShaderStencilExport
    Graphics.GL.Extension.AMD.ShaderTrinaryMinmax
    Graphics.GL.Extension.AMD.SparseTexture
    Graphics.GL.Extension.AMD.StencilOperationExtended
    Graphics.GL.Extension.AMD.TextureTexture4
    Graphics.GL.Extension.AMD.TransformFeedback3LinesTriangles
    Graphics.GL.Extension.AMD.TransformFeedback4
    Graphics.GL.Extension.AMD.VertexShaderLayer
    Graphics.GL.Extension.AMD.VertexShaderTessellator
    Graphics.GL.Extension.AMD.VertexShaderViewportIndex
    Graphics.GL.Extension.ANDROID
    Graphics.GL.Extension.ANDROID.ExtensionPackEs31a
    Graphics.GL.Extension.ANGLE
    Graphics.GL.Extension.ANGLE.DepthTexture
    Graphics.GL.Extension.ANGLE.FramebufferBlit
    Graphics.GL.Extension.ANGLE.FramebufferMultisample
    Graphics.GL.Extension.ANGLE.InstancedArrays
    Graphics.GL.Extension.ANGLE.PackReverseRowOrder
    Graphics.GL.Extension.ANGLE.ProgramBinary
    Graphics.GL.Extension.ANGLE.TextureCompressionDxt3
    Graphics.GL.Extension.ANGLE.TextureCompressionDxt5
    Graphics.GL.Extension.ANGLE.TextureUsage
    Graphics.GL.Extension.ANGLE.TranslatedShaderSource
    Graphics.GL.Extension.APPLE
    Graphics.GL.Extension.APPLE.AuxDepthStencil
    Graphics.GL.Extension.APPLE.ClientStorage
    Graphics.GL.Extension.APPLE.ClipDistance
    Graphics.GL.Extension.APPLE.ColorBufferPackedFloat
    Graphics.GL.Extension.APPLE.CopyTextureLevels
    Graphics.GL.Extension.APPLE.ElementArray
    Graphics.GL.Extension.APPLE.Fence
    Graphics.GL.Extension.APPLE.FloatPixels
    Graphics.GL.Extension.APPLE.FlushBufferRange
    Graphics.GL.Extension.APPLE.FramebufferMultisample
    Graphics.GL.Extension.APPLE.ObjectPurgeable
    Graphics.GL.Extension.APPLE.Rgb422
    Graphics.GL.Extension.APPLE.RowBytes
    Graphics.GL.Extension.APPLE.SpecularVector
    Graphics.GL.Extension.APPLE.Sync
    Graphics.GL.Extension.APPLE.Texture2DLimitedNpot
    Graphics.GL.Extension.APPLE.TextureFormatBGRA8888
    Graphics.GL.Extension.APPLE.TextureMaxLevel
    Graphics.GL.Extension.APPLE.TexturePackedFloat
    Graphics.GL.Extension.APPLE.TextureRange
    Graphics.GL.Extension.APPLE.TransformHint
    Graphics.GL.Extension.APPLE.VertexArrayObject
    Graphics.GL.Extension.APPLE.VertexArrayRange
    Graphics.GL.Extension.APPLE.VertexProgramEvaluators
    Graphics.GL.Extension.APPLE.Ycbcr422
    Graphics.GL.Extension.ARB
    Graphics.GL.Extension.ARB.ArraysOfArrays
    Graphics.GL.Extension.ARB.BaseInstance
    Graphics.GL.Extension.ARB.BindlessTexture
    Graphics.GL.Extension.ARB.BlendFuncExtended
    Graphics.GL.Extension.ARB.BufferStorage
    Graphics.GL.Extension.ARB.ClEvent
    Graphics.GL.Extension.ARB.ClearBufferObject
    Graphics.GL.Extension.ARB.ClearTexture
    Graphics.GL.Extension.ARB.ClipControl
    Graphics.GL.Extension.ARB.ColorBufferFloat
    Graphics.GL.Extension.ARB.Compatibility
    Graphics.GL.Extension.ARB.CompressedTexturePixelStorage
    Graphics.GL.Extension.ARB.ComputeShader
    Graphics.GL.Extension.ARB.ComputeVariableGroupSize
    Graphics.GL.Extension.ARB.ConditionalRenderInverted
    Graphics.GL.Extension.ARB.ConservativeDepth
    Graphics.GL.Extension.ARB.CopyBuffer
    Graphics.GL.Extension.ARB.CopyImage
    Graphics.GL.Extension.ARB.CullDistance
    Graphics.GL.Extension.ARB.DebugOutput
    Graphics.GL.Extension.ARB.DepthBufferFloat
    Graphics.GL.Extension.ARB.DepthClamp
    Graphics.GL.Extension.ARB.DepthTexture
    Graphics.GL.Extension.ARB.DerivativeControl
    Graphics.GL.Extension.ARB.DirectStateAccess
    Graphics.GL.Extension.ARB.DrawBuffers
    Graphics.GL.Extension.ARB.DrawBuffersBlend
    Graphics.GL.Extension.ARB.DrawElementsBaseVertex
    Graphics.GL.Extension.ARB.DrawIndirect
    Graphics.GL.Extension.ARB.DrawInstanced
    Graphics.GL.Extension.ARB.ES2Compatibility
    Graphics.GL.Extension.ARB.ES31Compatibility
    Graphics.GL.Extension.ARB.ES3Compatibility
    Graphics.GL.Extension.ARB.EnhancedLayouts
    Graphics.GL.Extension.ARB.ExplicitAttribLocation
    Graphics.GL.Extension.ARB.ExplicitUniformLocation
    Graphics.GL.Extension.ARB.FragmentCoordConventions
    Graphics.GL.Extension.ARB.FragmentLayerViewport
    Graphics.GL.Extension.ARB.FragmentProgram
    Graphics.GL.Extension.ARB.FragmentProgramShadow
    Graphics.GL.Extension.ARB.FragmentShader
    Graphics.GL.Extension.ARB.FramebufferNoAttachments
    Graphics.GL.Extension.ARB.FramebufferObject
    Graphics.GL.Extension.ARB.FramebufferSRGB
    Graphics.GL.Extension.ARB.GeometryShader4
    Graphics.GL.Extension.ARB.GetProgramBinary
    Graphics.GL.Extension.ARB.GetTextureSubImage
    Graphics.GL.Extension.ARB.GpuShader5
    Graphics.GL.Extension.ARB.GpuShaderFp64
    Graphics.GL.Extension.ARB.HalfFloatPixel
    Graphics.GL.Extension.ARB.HalfFloatVertex
    Graphics.GL.Extension.ARB.Imaging
    Graphics.GL.Extension.ARB.IndirectParameters
    Graphics.GL.Extension.ARB.InstancedArrays
    Graphics.GL.Extension.ARB.InternalformatQuery
    Graphics.GL.Extension.ARB.InternalformatQuery2
    Graphics.GL.Extension.ARB.InvalidateSubdata
    Graphics.GL.Extension.ARB.MapBufferAlignment
    Graphics.GL.Extension.ARB.MapBufferRange
    Graphics.GL.Extension.ARB.MatrixPalette
    Graphics.GL.Extension.ARB.MultiBind
    Graphics.GL.Extension.ARB.MultiDrawIndirect
    Graphics.GL.Extension.ARB.Multisample
    Graphics.GL.Extension.ARB.Multitexture
    Graphics.GL.Extension.ARB.OcclusionQuery
    Graphics.GL.Extension.ARB.OcclusionQuery2
    Graphics.GL.Extension.ARB.PipelineStatisticsQuery
    Graphics.GL.Extension.ARB.PixelBufferObject
    Graphics.GL.Extension.ARB.PointParameters
    Graphics.GL.Extension.ARB.PointSprite
    Graphics.GL.Extension.ARB.ProgramInterfaceQuery
    Graphics.GL.Extension.ARB.ProvokingVertex
    Graphics.GL.Extension.ARB.QueryBufferObject
    Graphics.GL.Extension.ARB.RobustBufferAccessBehavior
    Graphics.GL.Extension.ARB.Robustness
    Graphics.GL.Extension.ARB.RobustnessIsolation
    Graphics.GL.Extension.ARB.SampleShading
    Graphics.GL.Extension.ARB.SamplerObjects
    Graphics.GL.Extension.ARB.SeamlessCubeMap
    Graphics.GL.Extension.ARB.SeamlessCubemapPerTexture
    Graphics.GL.Extension.ARB.SeparateShaderObjects
    Graphics.GL.Extension.ARB.ShaderAtomicCounters
    Graphics.GL.Extension.ARB.ShaderBitEncoding
    Graphics.GL.Extension.ARB.ShaderDrawParameters
    Graphics.GL.Extension.ARB.ShaderGroupVote
    Graphics.GL.Extension.ARB.ShaderImageLoadStore
    Graphics.GL.Extension.ARB.ShaderImageSize
    Graphics.GL.Extension.ARB.ShaderObjects
    Graphics.GL.Extension.ARB.ShaderPrecision
    Graphics.GL.Extension.ARB.ShaderStencilExport
    Graphics.GL.Extension.ARB.ShaderStorageBufferObject
    Graphics.GL.Extension.ARB.ShaderSubroutine
    Graphics.GL.Extension.ARB.ShaderTextureImageSamples
    Graphics.GL.Extension.ARB.ShaderTextureLod
    Graphics.GL.Extension.ARB.ShadingLanguage100
    Graphics.GL.Extension.ARB.ShadingLanguage420pack
    Graphics.GL.Extension.ARB.ShadingLanguageInclude
    Graphics.GL.Extension.ARB.ShadingLanguagePacking
    Graphics.GL.Extension.ARB.Shadow
    Graphics.GL.Extension.ARB.ShadowAmbient
    Graphics.GL.Extension.ARB.SparseBuffer
    Graphics.GL.Extension.ARB.SparseTexture
    Graphics.GL.Extension.ARB.StencilTexturing
    Graphics.GL.Extension.ARB.Sync
    Graphics.GL.Extension.ARB.TessellationShader
    Graphics.GL.Extension.ARB.TextureBarrier
    Graphics.GL.Extension.ARB.TextureBorderClamp
    Graphics.GL.Extension.ARB.TextureBufferObject
    Graphics.GL.Extension.ARB.TextureBufferObjectRgb32
    Graphics.GL.Extension.ARB.TextureBufferRange
    Graphics.GL.Extension.ARB.TextureCompression
    Graphics.GL.Extension.ARB.TextureCompressionBptc
    Graphics.GL.Extension.ARB.TextureCompressionRgtc
    Graphics.GL.Extension.ARB.TextureCubeMap
    Graphics.GL.Extension.ARB.TextureCubeMapArray
    Graphics.GL.Extension.ARB.TextureEnvAdd
    Graphics.GL.Extension.ARB.TextureEnvCombine
    Graphics.GL.Extension.ARB.TextureEnvCrossbar
    Graphics.GL.Extension.ARB.TextureEnvDot3
    Graphics.GL.Extension.ARB.TextureFloat
    Graphics.GL.Extension.ARB.TextureGather
    Graphics.GL.Extension.ARB.TextureMirrorClampToEdge
    Graphics.GL.Extension.ARB.TextureMirroredRepeat
    Graphics.GL.Extension.ARB.TextureMultisample
    Graphics.GL.Extension.ARB.TextureNonPowerOfTwo
    Graphics.GL.Extension.ARB.TextureQueryLevels
    Graphics.GL.Extension.ARB.TextureQueryLod
    Graphics.GL.Extension.ARB.TextureRectangle
    Graphics.GL.Extension.ARB.TextureRg
    Graphics.GL.Extension.ARB.TextureRgb10A2ui
    Graphics.GL.Extension.ARB.TextureStencil8
    Graphics.GL.Extension.ARB.TextureStorage
    Graphics.GL.Extension.ARB.TextureStorageMultisample
    Graphics.GL.Extension.ARB.TextureSwizzle
    Graphics.GL.Extension.ARB.TextureView
    Graphics.GL.Extension.ARB.TimerQuery
    Graphics.GL.Extension.ARB.TransformFeedback2
    Graphics.GL.Extension.ARB.TransformFeedback3
    Graphics.GL.Extension.ARB.TransformFeedbackInstanced
    Graphics.GL.Extension.ARB.TransformFeedbackOverflowQuery
    Graphics.GL.Extension.ARB.TransposeMatrix
    Graphics.GL.Extension.ARB.UniformBufferObject
    Graphics.GL.Extension.ARB.VertexArrayBgra
    Graphics.GL.Extension.ARB.VertexArrayObject
    Graphics.GL.Extension.ARB.VertexAttrib64bit
    Graphics.GL.Extension.ARB.VertexAttribBinding
    Graphics.GL.Extension.ARB.VertexBlend
    Graphics.GL.Extension.ARB.VertexBufferObject
    Graphics.GL.Extension.ARB.VertexProgram
    Graphics.GL.Extension.ARB.VertexShader
    Graphics.GL.Extension.ARB.VertexType10f11f11fRev
    Graphics.GL.Extension.ARB.VertexType2101010Rev
    Graphics.GL.Extension.ARB.ViewportArray
    Graphics.GL.Extension.ARB.WindowPos
    Graphics.GL.Extension.ARM
    Graphics.GL.Extension.ARM.MaliProgramBinary
    Graphics.GL.Extension.ARM.MaliShaderBinary
    Graphics.GL.Extension.ARM.Rgba8
    Graphics.GL.Extension.ARM.ShaderFramebufferFetch
    Graphics.GL.Extension.ARM.ShaderFramebufferFetchDepthStencil
    Graphics.GL.Extension.ATI
    Graphics.GL.Extension.ATI.DrawBuffers
    Graphics.GL.Extension.ATI.ElementArray
    Graphics.GL.Extension.ATI.EnvmapBumpmap
    Graphics.GL.Extension.ATI.FragmentShader
    Graphics.GL.Extension.ATI.MapObjectBuffer
    Graphics.GL.Extension.ATI.Meminfo
    Graphics.GL.Extension.ATI.PixelFormatFloat
    Graphics.GL.Extension.ATI.PnTriangles
    Graphics.GL.Extension.ATI.SeparateStencil
    Graphics.GL.Extension.ATI.TextFragmentShader
    Graphics.GL.Extension.ATI.TextureEnvCombine3
    Graphics.GL.Extension.ATI.TextureFloat
    Graphics.GL.Extension.ATI.TextureMirrorOnce
    Graphics.GL.Extension.ATI.VertexArrayObject
    Graphics.GL.Extension.ATI.VertexAttribArrayObject
    Graphics.GL.Extension.ATI.VertexStreams
    Graphics.GL.Extension.DMP
    Graphics.GL.Extension.DMP.ProgramBinary
    Graphics.GL.Extension.DMP.ShaderBinary
    Graphics.GL.Extension.EXT
    Graphics.GL.Extension.EXT.Abgr
    Graphics.GL.Extension.EXT.Bgra
    Graphics.GL.Extension.EXT.BindableUniform
    Graphics.GL.Extension.EXT.BlendColor
    Graphics.GL.Extension.EXT.BlendEquationSeparate
    Graphics.GL.Extension.EXT.BlendFuncSeparate
    Graphics.GL.Extension.EXT.BlendLogicOp
    Graphics.GL.Extension.EXT.BlendMinmax
    Graphics.GL.Extension.EXT.BlendSubtract
    Graphics.GL.Extension.EXT.ClipVolumeHint
    Graphics.GL.Extension.EXT.Cmyka
    Graphics.GL.Extension.EXT.ColorBufferHalfFloat
    Graphics.GL.Extension.EXT.ColorSubtable
    Graphics.GL.Extension.EXT.CompiledVertexArray
    Graphics.GL.Extension.EXT.Convolution
    Graphics.GL.Extension.EXT.CoordinateFrame
    Graphics.GL.Extension.EXT.CopyImage
    Graphics.GL.Extension.EXT.CopyTexture
    Graphics.GL.Extension.EXT.CullVertex
    Graphics.GL.Extension.EXT.DebugLabel
    Graphics.GL.Extension.EXT.DebugMarker
    Graphics.GL.Extension.EXT.DepthBoundsTest
    Graphics.GL.Extension.EXT.DirectStateAccess
    Graphics.GL.Extension.EXT.DiscardFramebuffer
    Graphics.GL.Extension.EXT.DisjointTimerQuery
    Graphics.GL.Extension.EXT.DrawBuffers
    Graphics.GL.Extension.EXT.DrawBuffers2
    Graphics.GL.Extension.EXT.DrawBuffersIndexed
    Graphics.GL.Extension.EXT.DrawInstanced
    Graphics.GL.Extension.EXT.DrawRangeElements
    Graphics.GL.Extension.EXT.FogCoord
    Graphics.GL.Extension.EXT.FourTwoTwoPixels
    Graphics.GL.Extension.EXT.FramebufferBlit
    Graphics.GL.Extension.EXT.FramebufferMultisample
    Graphics.GL.Extension.EXT.FramebufferMultisampleBlitScaled
    Graphics.GL.Extension.EXT.FramebufferObject
    Graphics.GL.Extension.EXT.FramebufferSRGB
    Graphics.GL.Extension.EXT.GeometryPointSize
    Graphics.GL.Extension.EXT.GeometryShader
    Graphics.GL.Extension.EXT.GeometryShader4
    Graphics.GL.Extension.EXT.GpuProgramParameters
    Graphics.GL.Extension.EXT.GpuShader4
    Graphics.GL.Extension.EXT.GpuShader5
    Graphics.GL.Extension.EXT.Histogram
    Graphics.GL.Extension.EXT.IndexArrayFormats
    Graphics.GL.Extension.EXT.IndexFunc
    Graphics.GL.Extension.EXT.IndexMaterial
    Graphics.GL.Extension.EXT.IndexTexture
    Graphics.GL.Extension.EXT.InstancedArrays
    Graphics.GL.Extension.EXT.LightTexture
    Graphics.GL.Extension.EXT.MapBufferRange
    Graphics.GL.Extension.EXT.MiscAttribute
    Graphics.GL.Extension.EXT.MultiDrawArrays
    Graphics.GL.Extension.EXT.Multisample
    Graphics.GL.Extension.EXT.MultisampledRenderToTexture
    Graphics.GL.Extension.EXT.MultiviewDrawBuffers
    Graphics.GL.Extension.EXT.OcclusionQueryBoolean
    Graphics.GL.Extension.EXT.PackedDepthStencil
    Graphics.GL.Extension.EXT.PackedFloat
    Graphics.GL.Extension.EXT.PackedPixels
    Graphics.GL.Extension.EXT.PalettedTexture
    Graphics.GL.Extension.EXT.PixelBufferObject
    Graphics.GL.Extension.EXT.PixelTransform
    Graphics.GL.Extension.EXT.PixelTransformColorTable
    Graphics.GL.Extension.EXT.PointParameters
    Graphics.GL.Extension.EXT.PolygonOffset
    Graphics.GL.Extension.EXT.PolygonOffsetClamp
    Graphics.GL.Extension.EXT.PostDepthCoverage
    Graphics.GL.Extension.EXT.PrimitiveBoundingBox
    Graphics.GL.Extension.EXT.ProvokingVertex
    Graphics.GL.Extension.EXT.PvrtcSRGB
    Graphics.GL.Extension.EXT.RasterMultisample
    Graphics.GL.Extension.EXT.ReadFormatBgra
    Graphics.GL.Extension.EXT.RescaleNormal
    Graphics.GL.Extension.EXT.Robustness
    Graphics.GL.Extension.EXT.SRGB
    Graphics.GL.Extension.EXT.SRGBWriteControl
    Graphics.GL.Extension.EXT.SecondaryColor
    Graphics.GL.Extension.EXT.SeparateShaderObjects
    Graphics.GL.Extension.EXT.SeparateSpecularColor
    Graphics.GL.Extension.EXT.ShaderFramebufferFetch
    Graphics.GL.Extension.EXT.ShaderImageLoadFormatted
    Graphics.GL.Extension.EXT.ShaderImageLoadStore
    Graphics.GL.Extension.EXT.ShaderImplicitConversions
    Graphics.GL.Extension.EXT.ShaderIntegerMix
    Graphics.GL.Extension.EXT.ShaderIoBlocks
    Graphics.GL.Extension.EXT.ShaderPixelLocalStorage
    Graphics.GL.Extension.EXT.ShaderTextureLod
    Graphics.GL.Extension.EXT.ShadowFuncs
    Graphics.GL.Extension.EXT.ShadowSamplers
    Graphics.GL.Extension.EXT.SharedTexturePalette
    Graphics.GL.Extension.EXT.SparseTexture2
    Graphics.GL.Extension.EXT.StencilClearTag
    Graphics.GL.Extension.EXT.StencilTwoSide
    Graphics.GL.Extension.EXT.StencilWrap
    Graphics.GL.Extension.EXT.Subtexture
    Graphics.GL.Extension.EXT.TessellationPointSize
    Graphics.GL.Extension.EXT.TessellationShader
    Graphics.GL.Extension.EXT.Texture
    Graphics.GL.Extension.EXT.Texture3D
    Graphics.GL.Extension.EXT.TextureArray
    Graphics.GL.Extension.EXT.TextureBorderClamp
    Graphics.GL.Extension.EXT.TextureBuffer
    Graphics.GL.Extension.EXT.TextureBufferObject
    Graphics.GL.Extension.EXT.TextureCompressionDxt1
    Graphics.GL.Extension.EXT.TextureCompressionLatc
    Graphics.GL.Extension.EXT.TextureCompressionRgtc
    Graphics.GL.Extension.EXT.TextureCompressionS3tc
    Graphics.GL.Extension.EXT.TextureCubeMap
    Graphics.GL.Extension.EXT.TextureCubeMapArray
    Graphics.GL.Extension.EXT.TextureEnvAdd
    Graphics.GL.Extension.EXT.TextureEnvCombine
    Graphics.GL.Extension.EXT.TextureEnvDot3
    Graphics.GL.Extension.EXT.TextureFilterAnisotropic
    Graphics.GL.Extension.EXT.TextureFilterMinmax
    Graphics.GL.Extension.EXT.TextureFormatBGRA8888
    Graphics.GL.Extension.EXT.TextureInteger
    Graphics.GL.Extension.EXT.TextureLodBias
    Graphics.GL.Extension.EXT.TextureMirrorClamp
    Graphics.GL.Extension.EXT.TextureObject
    Graphics.GL.Extension.EXT.TexturePerturbNormal
    Graphics.GL.Extension.EXT.TextureRg
    Graphics.GL.Extension.EXT.TextureSRGB
    Graphics.GL.Extension.EXT.TextureSRGBDecode
    Graphics.GL.Extension.EXT.TextureSharedExponent
    Graphics.GL.Extension.EXT.TextureSnorm
    Graphics.GL.Extension.EXT.TextureStorage
    Graphics.GL.Extension.EXT.TextureSwizzle
    Graphics.GL.Extension.EXT.TextureType2101010REV
    Graphics.GL.Extension.EXT.TextureView
    Graphics.GL.Extension.EXT.TimerQuery
    Graphics.GL.Extension.EXT.TransformFeedback
    Graphics.GL.Extension.EXT.UnpackSubimage
    Graphics.GL.Extension.EXT.VertexArray
    Graphics.GL.Extension.EXT.VertexArrayBgra
    Graphics.GL.Extension.EXT.VertexAttrib64bit
    Graphics.GL.Extension.EXT.VertexShader
    Graphics.GL.Extension.EXT.VertexWeighting
    Graphics.GL.Extension.EXT.X11SyncObject
    Graphics.GL.Extension.FJ
    Graphics.GL.Extension.FJ.ShaderBinaryGCCSO
    Graphics.GL.Extension.GREMEDY
    Graphics.GL.Extension.GREMEDY.FrameTerminator
    Graphics.GL.Extension.GREMEDY.StringMarker
    Graphics.GL.Extension.HP
    Graphics.GL.Extension.HP.ConvolutionBorderModes
    Graphics.GL.Extension.HP.ImageTransform
    Graphics.GL.Extension.HP.OcclusionTest
    Graphics.GL.Extension.HP.TextureLighting
    Graphics.GL.Extension.IBM
    Graphics.GL.Extension.IBM.CullVertex
    Graphics.GL.Extension.IBM.MultimodeDrawArrays
    Graphics.GL.Extension.IBM.RasterposClip
    Graphics.GL.Extension.IBM.StaticData
    Graphics.GL.Extension.IBM.TextureMirroredRepeat
    Graphics.GL.Extension.IBM.VertexArrayLists
    Graphics.GL.Extension.IMG
    Graphics.GL.Extension.IMG.MultisampledRenderToTexture
    Graphics.GL.Extension.IMG.ProgramBinary
    Graphics.GL.Extension.IMG.ReadFormat
    Graphics.GL.Extension.IMG.ShaderBinary
    Graphics.GL.Extension.IMG.TextureCompressionPvrtc
    Graphics.GL.Extension.IMG.TextureCompressionPvrtc2
    Graphics.GL.Extension.IMG.TextureEnvEnhancedFixedFunction
    Graphics.GL.Extension.IMG.UserClipPlane
    Graphics.GL.Extension.INGR
    Graphics.GL.Extension.INGR.BlendFuncSeparate
    Graphics.GL.Extension.INGR.ColorClamp
    Graphics.GL.Extension.INGR.InterlaceRead
    Graphics.GL.Extension.INTEL
    Graphics.GL.Extension.INTEL.FragmentShaderOrdering
    Graphics.GL.Extension.INTEL.MapTexture
    Graphics.GL.Extension.INTEL.ParallelArrays
    Graphics.GL.Extension.INTEL.PerformanceQuery
    Graphics.GL.Extension.KHR
    Graphics.GL.Extension.KHR.BlendEquationAdvanced
    Graphics.GL.Extension.KHR.BlendEquationAdvancedCoherent
    Graphics.GL.Extension.KHR.ContextFlushControl
    Graphics.GL.Extension.KHR.Debug
    Graphics.GL.Extension.KHR.RobustBufferAccessBehavior
    Graphics.GL.Extension.KHR.Robustness
    Graphics.GL.Extension.KHR.TextureCompressionAstcHdr
    Graphics.GL.Extension.KHR.TextureCompressionAstcLdr
    Graphics.GL.Extension.MESA
    Graphics.GL.Extension.MESA.PackInvert
    Graphics.GL.Extension.MESA.ResizeBuffers
    Graphics.GL.Extension.MESA.WindowPos
    Graphics.GL.Extension.MESA.YcbcrTexture
    Graphics.GL.Extension.MESAX
    Graphics.GL.Extension.MESAX.TextureStack
    Graphics.GL.Extension.NV
    Graphics.GL.Extension.NV.BindlessMultiDrawIndirect
    Graphics.GL.Extension.NV.BindlessMultiDrawIndirectCount
    Graphics.GL.Extension.NV.BindlessTexture
    Graphics.GL.Extension.NV.BlendEquationAdvanced
    Graphics.GL.Extension.NV.BlendEquationAdvancedCoherent
    Graphics.GL.Extension.NV.BlendSquare
    Graphics.GL.Extension.NV.ComputeProgram5
    Graphics.GL.Extension.NV.ConditionalRender
    Graphics.GL.Extension.NV.ConservativeRaster
    Graphics.GL.Extension.NV.CopyBuffer
    Graphics.GL.Extension.NV.CopyDepthToColor
    Graphics.GL.Extension.NV.CopyImage
    Graphics.GL.Extension.NV.CoverageSample
    Graphics.GL.Extension.NV.DeepTexture3D
    Graphics.GL.Extension.NV.DepthBufferFloat
    Graphics.GL.Extension.NV.DepthClamp
    Graphics.GL.Extension.NV.DepthNonlinear
    Graphics.GL.Extension.NV.DrawBuffers
    Graphics.GL.Extension.NV.DrawInstanced
    Graphics.GL.Extension.NV.DrawTexture
    Graphics.GL.Extension.NV.Evaluators
    Graphics.GL.Extension.NV.ExplicitAttribLocation
    Graphics.GL.Extension.NV.ExplicitMultisample
    Graphics.GL.Extension.NV.FboColorAttachments
    Graphics.GL.Extension.NV.Fence
    Graphics.GL.Extension.NV.FillRectangle
    Graphics.GL.Extension.NV.FloatBuffer
    Graphics.GL.Extension.NV.FogDistance
    Graphics.GL.Extension.NV.FragmentCoverageToColor
    Graphics.GL.Extension.NV.FragmentProgram
    Graphics.GL.Extension.NV.FragmentProgram2
    Graphics.GL.Extension.NV.FragmentProgram4
    Graphics.GL.Extension.NV.FragmentProgramOption
    Graphics.GL.Extension.NV.FragmentShaderInterlock
    Graphics.GL.Extension.NV.FramebufferBlit
    Graphics.GL.Extension.NV.FramebufferMixedSamples
    Graphics.GL.Extension.NV.FramebufferMultisample
    Graphics.GL.Extension.NV.FramebufferMultisampleCoverage
    Graphics.GL.Extension.NV.GenerateMipmapSRGB
    Graphics.GL.Extension.NV.GeometryProgram4
    Graphics.GL.Extension.NV.GeometryShader4
    Graphics.GL.Extension.NV.GeometryShaderPassthrough
    Graphics.GL.Extension.NV.GpuProgram4
    Graphics.GL.Extension.NV.GpuProgram5
    Graphics.GL.Extension.NV.GpuProgram5MemExtended
    Graphics.GL.Extension.NV.GpuShader5
    Graphics.GL.Extension.NV.HalfFloat
    Graphics.GL.Extension.NV.InstancedArrays
    Graphics.GL.Extension.NV.InternalformatSampleQuery
    Graphics.GL.Extension.NV.LightMaxExponent
    Graphics.GL.Extension.NV.MultisampleCoverage
    Graphics.GL.Extension.NV.MultisampleFilterHint
    Graphics.GL.Extension.NV.NonSquareMatrices
    Graphics.GL.Extension.NV.OcclusionQuery
    Graphics.GL.Extension.NV.PackedDepthStencil
    Graphics.GL.Extension.NV.ParameterBufferObject
    Graphics.GL.Extension.NV.ParameterBufferObject2
    Graphics.GL.Extension.NV.PathRendering
    Graphics.GL.Extension.NV.PathRenderingSharedEdge
    Graphics.GL.Extension.NV.PixelDataRange
    Graphics.GL.Extension.NV.PointSprite
    Graphics.GL.Extension.NV.PresentVideo
    Graphics.GL.Extension.NV.PrimitiveRestart
    Graphics.GL.Extension.NV.ReadBuffer
    Graphics.GL.Extension.NV.ReadBufferFront
    Graphics.GL.Extension.NV.ReadDepth
    Graphics.GL.Extension.NV.ReadDepthStencil
    Graphics.GL.Extension.NV.ReadStencil
    Graphics.GL.Extension.NV.RegisterCombiners
    Graphics.GL.Extension.NV.RegisterCombiners2
    Graphics.GL.Extension.NV.SRGBFormats
    Graphics.GL.Extension.NV.SampleLocations
    Graphics.GL.Extension.NV.SampleMaskOverrideCoverage
    Graphics.GL.Extension.NV.ShaderAtomicCounters
    Graphics.GL.Extension.NV.ShaderAtomicFloat
    Graphics.GL.Extension.NV.ShaderAtomicFp16Vector
    Graphics.GL.Extension.NV.ShaderAtomicInt64
    Graphics.GL.Extension.NV.ShaderBufferLoad
    Graphics.GL.Extension.NV.ShaderBufferStore
    Graphics.GL.Extension.NV.ShaderStorageBufferObject
    Graphics.GL.Extension.NV.ShaderThreadGroup
    Graphics.GL.Extension.NV.ShaderThreadShuffle
    Graphics.GL.Extension.NV.ShadowSamplersArray
    Graphics.GL.Extension.NV.ShadowSamplersCube
    Graphics.GL.Extension.NV.TessellationProgram5
    Graphics.GL.Extension.NV.TexgenEmboss
    Graphics.GL.Extension.NV.TexgenReflection
    Graphics.GL.Extension.NV.TextureBarrier
    Graphics.GL.Extension.NV.TextureBorderClamp
    Graphics.GL.Extension.NV.TextureCompressionS3tcUpdate
    Graphics.GL.Extension.NV.TextureCompressionVtc
    Graphics.GL.Extension.NV.TextureEnvCombine4
    Graphics.GL.Extension.NV.TextureExpandNormal
    Graphics.GL.Extension.NV.TextureMultisample
    Graphics.GL.Extension.NV.TextureNpot2DMipmap
    Graphics.GL.Extension.NV.TextureRectangle
    Graphics.GL.Extension.NV.TextureShader
    Graphics.GL.Extension.NV.TextureShader2
    Graphics.GL.Extension.NV.TextureShader3
    Graphics.GL.Extension.NV.TransformFeedback
    Graphics.GL.Extension.NV.TransformFeedback2
    Graphics.GL.Extension.NV.UniformBufferUnifiedMemory
    Graphics.GL.Extension.NV.VdpauInterop
    Graphics.GL.Extension.NV.VertexArrayRange
    Graphics.GL.Extension.NV.VertexArrayRange2
    Graphics.GL.Extension.NV.VertexAttribInteger64bit
    Graphics.GL.Extension.NV.VertexBufferUnifiedMemory
    Graphics.GL.Extension.NV.VertexProgram
    Graphics.GL.Extension.NV.VertexProgram11
    Graphics.GL.Extension.NV.VertexProgram2
    Graphics.GL.Extension.NV.VertexProgram2Option
    Graphics.GL.Extension.NV.VertexProgram3
    Graphics.GL.Extension.NV.VertexProgram4
    Graphics.GL.Extension.NV.VideoCapture
    Graphics.GL.Extension.NVX
    Graphics.GL.Extension.NVX.ConditionalRender
    Graphics.GL.Extension.NVX.GpuMemoryInfo
    Graphics.GL.Extension.OES
    Graphics.GL.Extension.OES.BlendEquationSeparate
    Graphics.GL.Extension.OES.BlendFuncSeparate
    Graphics.GL.Extension.OES.BlendSubtract
    Graphics.GL.Extension.OES.ByteCoordinates
    Graphics.GL.Extension.OES.CompressedETC1RGB8SubTexture
    Graphics.GL.Extension.OES.CompressedETC1RGB8Texture
    Graphics.GL.Extension.OES.CompressedPalettedTexture
    Graphics.GL.Extension.OES.Depth24
    Graphics.GL.Extension.OES.Depth32
    Graphics.GL.Extension.OES.DepthTexture
    Graphics.GL.Extension.OES.DrawTexture
    Graphics.GL.Extension.OES.EGLImage
    Graphics.GL.Extension.OES.EGLImageExternal
    Graphics.GL.Extension.OES.ElementIndexUint
    Graphics.GL.Extension.OES.ExtendedMatrixPalette
    Graphics.GL.Extension.OES.FboRenderMipmap
    Graphics.GL.Extension.OES.FixedPoint
    Graphics.GL.Extension.OES.FragmentPrecisionHigh
    Graphics.GL.Extension.OES.FramebufferObject
    Graphics.GL.Extension.OES.GetProgramBinary
    Graphics.GL.Extension.OES.Mapbuffer
    Graphics.GL.Extension.OES.MatrixGet
    Graphics.GL.Extension.OES.MatrixPalette
    Graphics.GL.Extension.OES.PackedDepthStencil
    Graphics.GL.Extension.OES.PointSizeArray
    Graphics.GL.Extension.OES.PointSprite
    Graphics.GL.Extension.OES.QueryMatrix
    Graphics.GL.Extension.OES.ReadFormat
    Graphics.GL.Extension.OES.RequiredInternalformat
    Graphics.GL.Extension.OES.Rgb8Rgba8
    Graphics.GL.Extension.OES.SampleShading
    Graphics.GL.Extension.OES.SampleVariables
    Graphics.GL.Extension.OES.ShaderImageAtomic
    Graphics.GL.Extension.OES.ShaderMultisampleInterpolation
    Graphics.GL.Extension.OES.SinglePrecision
    Graphics.GL.Extension.OES.StandardDerivatives
    Graphics.GL.Extension.OES.Stencil1
    Graphics.GL.Extension.OES.Stencil4
    Graphics.GL.Extension.OES.Stencil8
    Graphics.GL.Extension.OES.StencilWrap
    Graphics.GL.Extension.OES.SurfacelessContext
    Graphics.GL.Extension.OES.Texture3D
    Graphics.GL.Extension.OES.TextureCompressionAstc
    Graphics.GL.Extension.OES.TextureCubeMap
    Graphics.GL.Extension.OES.TextureEnvCrossbar
    Graphics.GL.Extension.OES.TextureFloat
    Graphics.GL.Extension.OES.TextureFloatLinear
    Graphics.GL.Extension.OES.TextureHalfFloat
    Graphics.GL.Extension.OES.TextureHalfFloatLinear
    Graphics.GL.Extension.OES.TextureMirroredRepeat
    Graphics.GL.Extension.OES.TextureNpot
    Graphics.GL.Extension.OES.TextureStencil8
    Graphics.GL.Extension.OES.TextureStorageMultisample2dArray
    Graphics.GL.Extension.OES.VertexArrayObject
    Graphics.GL.Extension.OES.VertexHalfFloat
    Graphics.GL.Extension.OES.VertexType1010102
    Graphics.GL.Extension.OML
    Graphics.GL.Extension.OML.Interlace
    Graphics.GL.Extension.OML.Resample
    Graphics.GL.Extension.OML.Subsample
    Graphics.GL.Extension.PGI
    Graphics.GL.Extension.PGI.MiscHints
    Graphics.GL.Extension.PGI.VertexHints
    Graphics.GL.Extension.QCOM
    Graphics.GL.Extension.QCOM.AlphaTest
    Graphics.GL.Extension.QCOM.BinningControl
    Graphics.GL.Extension.QCOM.DriverControl
    Graphics.GL.Extension.QCOM.ExtendedGet
    Graphics.GL.Extension.QCOM.ExtendedGet2
    Graphics.GL.Extension.QCOM.PerfmonGlobalMode
    Graphics.GL.Extension.QCOM.TiledRendering
    Graphics.GL.Extension.QCOM.WriteonlyRendering
    Graphics.GL.Extension.REND
    Graphics.GL.Extension.REND.ScreenCoordinates
    Graphics.GL.Extension.S3
    Graphics.GL.Extension.S3.S3tc
    Graphics.GL.Extension.SGI
    Graphics.GL.Extension.SGI.ColorMatrix
    Graphics.GL.Extension.SGI.ColorTable
    Graphics.GL.Extension.SGI.TextureColorTable
    Graphics.GL.Extension.SGIS
    Graphics.GL.Extension.SGIS.DetailTexture
    Graphics.GL.Extension.SGIS.FogFunction
    Graphics.GL.Extension.SGIS.GenerateMipmap
    Graphics.GL.Extension.SGIS.Multisample
    Graphics.GL.Extension.SGIS.PixelTexture
    Graphics.GL.Extension.SGIS.PointLineTexgen
    Graphics.GL.Extension.SGIS.PointParameters
    Graphics.GL.Extension.SGIS.SharpenTexture
    Graphics.GL.Extension.SGIS.Texture4D
    Graphics.GL.Extension.SGIS.TextureBorderClamp
    Graphics.GL.Extension.SGIS.TextureColorMask
    Graphics.GL.Extension.SGIS.TextureEdgeClamp
    Graphics.GL.Extension.SGIS.TextureFilter4
    Graphics.GL.Extension.SGIS.TextureLod
    Graphics.GL.Extension.SGIS.TextureSelect
    Graphics.GL.Extension.SGIX
    Graphics.GL.Extension.SGIX.Async
    Graphics.GL.Extension.SGIX.AsyncHistogram
    Graphics.GL.Extension.SGIX.AsyncPixel
    Graphics.GL.Extension.SGIX.BlendAlphaMinmax
    Graphics.GL.Extension.SGIX.CalligraphicFragment
    Graphics.GL.Extension.SGIX.Clipmap
    Graphics.GL.Extension.SGIX.ConvolutionAccuracy
    Graphics.GL.Extension.SGIX.DepthPassInstrument
    Graphics.GL.Extension.SGIX.DepthTexture
    Graphics.GL.Extension.SGIX.FlushRaster
    Graphics.GL.Extension.SGIX.FogOffset
    Graphics.GL.Extension.SGIX.FragmentLighting
    Graphics.GL.Extension.SGIX.Framezoom
    Graphics.GL.Extension.SGIX.IglooInterface
    Graphics.GL.Extension.SGIX.Instruments
    Graphics.GL.Extension.SGIX.Interlace
    Graphics.GL.Extension.SGIX.IrInstrument1
    Graphics.GL.Extension.SGIX.ListPriority
    Graphics.GL.Extension.SGIX.PixelTexture
    Graphics.GL.Extension.SGIX.PixelTiles
    Graphics.GL.Extension.SGIX.PolynomialFfd
    Graphics.GL.Extension.SGIX.ReferencePlane
    Graphics.GL.Extension.SGIX.Resample
    Graphics.GL.Extension.SGIX.ScalebiasHint
    Graphics.GL.Extension.SGIX.Shadow
    Graphics.GL.Extension.SGIX.ShadowAmbient
    Graphics.GL.Extension.SGIX.Sprite
    Graphics.GL.Extension.SGIX.Subsample
    Graphics.GL.Extension.SGIX.TagSampleBuffer
    Graphics.GL.Extension.SGIX.TextureAddEnv
    Graphics.GL.Extension.SGIX.TextureCoordinateClamp
    Graphics.GL.Extension.SGIX.TextureLodBias
    Graphics.GL.Extension.SGIX.TextureMultiBuffer
    Graphics.GL.Extension.SGIX.TextureScaleBias
    Graphics.GL.Extension.SGIX.VertexPreclip
    Graphics.GL.Extension.SGIX.Ycrcb
    Graphics.GL.Extension.SGIX.YcrcbSubsample
    Graphics.GL.Extension.SGIX.Ycrcba
    Graphics.GL.Extension.SUN
    Graphics.GL.Extension.SUN.ConvolutionBorderModes
    Graphics.GL.Extension.SUN.GlobalAlpha
    Graphics.GL.Extension.SUN.MeshArray
    Graphics.GL.Extension.SUN.SliceAccum
    Graphics.GL.Extension.SUN.TriangleList
    Graphics.GL.Extension.SUN.Vertex
    Graphics.GL.Extension.SUNX
    Graphics.GL.Extension.SUNX.ConstantData
    Graphics.GL.Extension.ThreeDFX
    Graphics.GL.Extension.ThreeDFX.Multisample
    Graphics.GL.Extension.ThreeDFX.Tbuffer
    Graphics.GL.Extension.ThreeDFX.TextureCompressionFXT1
    Graphics.GL.Extension.VIV
    Graphics.GL.Extension.VIV.ShaderBinary
    Graphics.GL.Extension.WIN
    Graphics.GL.Extension.WIN.PhongShading
    Graphics.GL.Extension.WIN.SpecularFog
    Graphics.GL.Internal.FFI
    Graphics.GL.Internal.Proc
    Graphics.GL.Internal.Shared
    Graphics.GL.Standard10
    Graphics.GL.Standard11
    Graphics.GL.Standard12
    Graphics.GL.Standard13
    Graphics.GL.Standard14
    Graphics.GL.Standard15
    Graphics.GL.Standard20
    Graphics.GL.Standard21
    Graphics.GL.Standard30
    Graphics.GL.Standard31
    Graphics.GL.Types
