name:          glgen
version:       0.9
synopsis:      Complete OpenGL raw bindings
description:   Complete OpenGL raw bindings
license:       BSD3
license-file:  LICENSE
author:        Edward A. Kmett, Gabríel Arthúr Pétursson, Sven Panne
maintainer:    ekmett@gmail.com
copyright:     Copyright © 2014-2019 Edward A. Kmett,
               Copyright © 2014-2017 Gabríel Arthúr Pétursson,
               Copyright © 2013 Sven Panne
category:      Graphics
build-type:    Simple
cabal-version: >=1.24
extra-source-files:
  gl.xml
  man.txt
  extensions.txt
  CHANGELOG.markdown
  README.markdown
  TODO.markdown
  Setup.hs
  gl/gl.cabal
  gl/CHANGELOG.markdown
  gl/README.markdown
  gl/TODO.markdown
  gl/Setup.hs
  gl/src/Graphics/GL/Internal/Proc.hs
  gl/src/Graphics/GL/Types.hs
  gl/src/Graphics/GL.hs
  gl/cbits/gl.c

source-repository head
  type:     git
  location: https://github.com/ekmett/gl

executable glgen
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Generator Module Parser Registry Utils
  default-language: Haskell2010
  build-depends:
    base == 4.*,
    directory >= 1.2 && <= 1.4,
    filepath >= 1.3 && < 1.5,
    hxt == 9.3.*,
    transformers >= 0.2 && < 0.6,
    containers >= 0.5 && < 0.7
